--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pyyaml = "^5.3.1"
 click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.0.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
