--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -15,3 +15,13 @@ jobs:
         path: ~/.virtualenvs
         key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements.*') }}
     - uses: pre-commit/action@v2.0.0
+  pytest:
+    runs-on: ubuntu-latest
+    needs: pre-commit
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+    - name: Install Pytest
+      run: pip install --upgrade pytest
+    - name: Test!
+      run: pytest
